--- a/app/views/spree/order_mailer/gift_card_email.html.erb
+++ b/app/views/spree/order_mailer/gift_card_email.html.erb
@@ -1,3 +1,11 @@
+
 <p>Hi <%= @gift_card.name %>,</p>
+<p><%= @gift_card.sender %> has sent you a gift card to use at Footnotes Jewelry's online store!</p>
+<p>Here's what they had to say:</p>
 <p><%= @gift_card.note %></p>
 <p>To use your <%= number_to_currency @gift_card.price %> Gift Card enter the following Gift Code during checkout: <%= @gift_card.code %></p>
+<p>Thanks,</p>
+<p>Footnotes</p>
+
+<p>www.footnotesjewelry.com</p>
+
